# Datathon_2026_Vin

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  WORKLOG.md  notebook_source.md  pyproject.toml  requirements-sql-rag-agent.txt  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: postgres-local-setup.md
notebooks/: baseline.ipynb  data_storytelling.ipynb  eda_raw_data.ipynb  eda_task_focused.ipynb  update_pitch_script_rigor.py
reports/: storytelling_presentation.html
results/: README.md
scratch/: check_cannibalization.py
scripts/: build_mismatch_rerun_comparisons.py  migrate_results_layout.py  rerun_mismatched_questions.py  restart_sql_rag_agent_ui.cmd  setup_postgres_local.ps1
sql/: 01_create_schemas_and_staging.sql  02_create_core_tables.sql  03_transform_staging_to_core.sql  04_create_marts.sql  05_verify_schema.sql
src/: analyze_forecast_failures.py  data_quality_pipeline.py  train_direct_elasticnet_seasonal_delta.py  train_direct_ridge_seasonal_delta.py  train_direct_seasonal_delta.py  train_hybrid_regime_lgbm.py  train_trend_hinge.py  two_pass_forecast.py
submissions/: _smoke_submission_direct_ridge.csv  submission_baseline_notebook.csv  submission_direct_elasticnet_seasonal_delta.csv  submission_direct_ridge_seasonal_delta.csv  submission_participant1_catboost_exact.csv  submission_pass1.csv  submission_pass2.csv  submission_pass_2_hybrid_regime_lgbm.csv  submission_pass_2_hybrid_regime_lgbm_calibrated.csv
tests/: test_data_quality_pipeline.py  test_mismatch_rerun_evaluation.py  (+5 more)
(+248 files in other folders)
